# poisonous-mushroom

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
models/: model.joblib
notebooks/: mushroom_analysis.ipynb  mushroom_analysis_pipeline.ipynb
poisonous_mushroom_analysis/stages/: data_load.py  evaluate.py  preprocessing.py  train.py
reports/: .gitignore  metrics.json
